[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
azure_data_cosmos = { git = "https://github.com/azure/azure-sdk-for-rust.git", rev = "8c4caa251c3903d5eae848b41bb1d02a4d65231c" }
azure_identity = { git = "https://github.com/azure/azure-sdk-for-rust.git", rev = "8c4caa251c3903d5eae848b41bb1d02a4d65231c" }
azure_core = { git = "https://github.com/azure/azure-sdk-for-rust.git", rev = "8c4caa251c3903d5eae848b41bb1d02a4d65231c" }
futures =  "0.3.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }